# portfolio-generator

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/common/: ProgressBar.tsx  Sidebar.tsx
src/components/generator/: DocumentGenerator.tsx
src/components/settings/: AISettings.tsx
src/data/: constants.ts
src/lib/: aiClient.ts  documentExporter.ts  documentGenerator.ts  documentTemplates.ts  documentTemplates2.ts  generator.ts  tauri-fallback.ts  tauri.ts
src/store/: usePortfolioStore.ts
src/types/: ai.ts  documents.ts  portfolio.ts
